--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
 <activity android:name=".ui.TutorialsActivity"></activity>
 <activity android:name=".ui.VideoActivity"></activity>
+<activity android:name=".ui.GeneratorListActivity"></activity>
 </application>
 
 
