--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="actionbar_src"/>
+	<classpathentry kind="lib" path="lib/achartengine-0.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
