--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity android:name=".ui.AboutActivity"></activity>
         <activity android:name=".ui.GeneratorListActivity"></activity>
         <activity android:name=".ui.JMLPatternActivity"></activity>
+        <activity android:name=".ui.ColorPreferenceActivity"></activity>
+        <activity android:name="org.superdry.util.colorpicker.lib.SuperdryColorPicker"
+			android:theme="@android:style/Theme.Dialog" />
         <activity android:name="org.achartengine.GraphicalActivity"></activity>
     </application>
 <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7"></uses-sdk>
