--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,23 +3,23 @@
       package="com.jonglen7.jugglinglab"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.GDCatalog" android:name=".ui.HomeApplication">
         <activity android:label="@string/app_name" android:name=".ui.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.PatternEntryActivity"></activity>
-        <activity android:name=".ui.GeneratorActivity"></activity>
-        <activity android:name=".ui.TutorialsActivity"></activity>
-        <activity android:name=".ui.PatternListActivity"></activity>
-        <activity android:name=".ui.MyProfileActivity"></activity>
-        <activity android:name=".ui.VideoActivity"></activity>
+        <activity android:name=".ui.AboutActivity" android:label="@string/about_title"></activity>
+        <activity android:name=".ui.PatternEntryActivity" android:label="@string/pattern_entry_title"></activity>
+        <activity android:name=".ui.GeneratorActivity" android:label="@string/generator_title"></activity>
+        <activity android:name=".ui.GeneratorListActivity"></activity>
+        <activity android:name=".ui.TutorialsActivity" android:label="@string/tutorials_title"></activity>
+        <activity android:name=".ui.PatternListActivity" android:label="@string/pattern_list_title"></activity>
+        <activity android:name=".ui.MyProfileActivity" android:label="@string/my_profile_title"></activity>
+        <activity android:name=".ui.VideoActivity" android:label="@string/video_title"></activity>
         <activity android:name=".ui.SettingsHomeActivity"></activity>
         <activity android:name=".ui.SettingsAnimationActivity"></activity>
-        <activity android:name=".ui.AboutActivity"></activity>
-        <activity android:name=".ui.GeneratorListActivity"></activity>
         <activity android:name=".ui.JMLPatternActivity"></activity>
         <activity android:name=".ui.ColorPreferenceActivity"></activity>
         <activity android:name="org.superdry.util.colorpicker.lib.SuperdryColorPicker"
