--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -14,8 +14,8 @@
         <activity android:name=".ui.PatternEntryActivity" android:label="@string/pattern_entry_title"></activity>
         <activity android:name=".ui.GeneratorActivity" android:label="@string/generator_title"></activity>
         <activity android:name=".ui.GeneratorListActivity"></activity>
-        <activity android:name=".ui.TutorialsActivity" android:label="@string/tutorials_title"></activity>
-        <activity android:name=".ui.PatternListActivity" android:label="@string/pattern_list_title"></activity>
+        <activity android:name=".ui.CollectionsActivity"></activity>
+        <activity android:name=".ui.CollectionActivity"></activity>
         <activity android:name=".ui.MyProfileActivity" android:label="@string/my_profile_title"></activity>
         <activity android:name=".ui.MyProfileTabActivity"></activity>
         <activity android:name=".ui.VideoActivity" android:label="@string/video_title"></activity>
