--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.jonglen7.jugglinglab"
-      android:versionCode="1"
+      android:versionCode="2"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7"></uses-sdk>
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.GDCatalog" android:name=".ui.HomeApplication">
@@ -13,6 +13,7 @@
         </activity>
         <activity android:name=".ui.AboutActivity" android:label="@string/about_title"></activity>
         <activity android:name=".ui.PatternEntryActivity" android:label="@string/pattern_entry_title"></activity>
+        <activity android:name=".ui.PatternInfoActivity"></activity>
         <activity android:name=".ui.GeneratorActivity" android:label="@string/generator_title"></activity>
         <activity android:name=".ui.GeneratorListActivity"></activity>
         <activity android:name=".ui.CollectionsActivity"></activity>
