--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -1,33 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.jonglen7.jugglinglab"
-      android:versionCode="2"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7"></uses-sdk>
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.GDCatalog" android:name=".ui.HomeApplication">
-        <activity android:label="@string/app_name" android:name=".ui.HomeActivity">
+    package="com.jonglen7.jugglinglab"
+    android:versionCode="2"
+    android:versionName="1.0">
+
+    <uses-sdk
+        android:minSdkVersion="7"
+        android:targetSdkVersion="7" />
+
+    <application
+        android:name=".ui.HomeApplication"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.GDCatalog">
+
+        <activity
+            android:name=".ui.HomeActivity"
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".ui.AboutActivity" android:label="@string/about_title"></activity>
-        <activity android:name=".ui.CollectionActivity"></activity>
-        <activity android:name=".ui.CollectionsActivity"></activity>
-        <activity android:name=".ui.ColorPreferenceActivity"></activity>
-        <activity android:name=".ui.HelpActivity"></activity>
-        <activity android:name=".ui.GeneratorActivity" android:label="@string/generator_title"></activity>
-        <activity android:name=".ui.GeneratorListActivity"></activity>
-        <activity android:name=".ui.JMLPatternActivity"></activity>
-        <activity android:name=".ui.MyProfileActivity" android:label="@string/my_profile_title"></activity>
-        <activity android:name=".ui.MyProfileTabActivity"></activity>
-        <activity android:name=".ui.PatternEntryActivity" android:label="@string/pattern_entry_title"></activity>
-        <activity android:name=".ui.PatternInfoActivity"></activity>
-        <activity android:name=".ui.SettingsAnimationActivity"></activity>
-        <activity android:name=".ui.SettingsActivity"></activity>
-        <activity android:name=".ui.VideoActivity" android:label="@string/video_title"></activity>
-        <activity android:name="org.superdry.util.colorpicker.lib.SuperdryColorPicker"
-			android:theme="@android:style/Theme.Dialog" />
-        <activity android:name="org.achartengine.GraphicalActivity"></activity>
+
+        <activity 
+           android:name=".ui.AboutActivity"
+           android:label="@string/about_title" />
+
+        <activity android:name=".ui.CollectionActivity" />
+
+        <activity android:name=".ui.CollectionsActivity" />
+
+        <activity android:name=".ui.ColorPreferenceActivity" />
+
+        <activity android:name=".ui.HelpActivity" />
+
+        <activity
+            android:name=".ui.GeneratorActivity"
+            android:label="@string/generator_title" />
+
+        <activity android:name=".ui.GeneratorListActivity" />
+
+        <activity android:name=".ui.AnimationActivity" />
+
+        <activity
+            android:name=".ui.MyProfileActivity"
+            android:label="@string/my_profile_title" />
+
+        <activity android:name=".ui.MyProfileTabActivity" />
+
+        <activity
+            android:name=".ui.PatternEntryActivity"
+            android:label="@string/pattern_entry_title" />
+
+        <activity android:name=".ui.PatternInfoActivity" />
+
+        <activity android:name=".ui.SettingsAnimationActivity" />
+
+        <activity android:name=".ui.SettingsActivity" />
+
+        <activity
+            android:name=".ui.VideoActivity"
+            android:label="@string/video_title" />
+
+        <activity
+            android:name="org.superdry.util.colorpicker.lib.SuperdryColorPicker"
+            android:theme="@android:style/Theme.Dialog" />
+
+        <activity android:name="org.achartengine.GraphicalActivity" />
+
     </application>
 </manifest> 
