--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:name=".ui.HomeApplication"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/Theme.GDCatalog">
+        android:theme="@style/Theme.JugglingLab">
 
         <activity
             android:name=".ui.HomeActivity"
