--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -3,7 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="lib/achartengine-0.7.0.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="lib/superdrycolorpickerlib.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/GreenDroid"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/achartengine-0.7.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
