JugglingRenderer updated to r162 and modify to avoid objects disappearance

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>Juggling Lab</name>
 	<comment></comment>
 	<projects>
+		<project>GreenDroid</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
