--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,13 +7,14 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="8" />
+        android:targetSdkVersion="17" />
 
     <application
         android:name=".ui.HomeApplication"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/Theme.JugglingLab">
+        android:theme="@style/Theme.JugglingLab"
+        android:allowBackup="true">
 
         <activity
             android:name=".ui.HomeActivity"
@@ -30,15 +31,13 @@
            android:name=".ui.AboutActivity"
            android:label="@string/about_title" />
 
-        <activity android:name=".ui.CollectionActivity" />
-
-        <activity android:name=".ui.CollectionsActivity" />
-
-        <activity android:name=".ui.ColorPreferenceActivity" />
-
         <activity
             android:name=".ui.HelpActivity"
             android:label="@string/help_title" />
+
+        <activity
+            android:name=".ui.PatternEntryActivity"
+            android:label="@string/pattern_entry_title" />
 
         <activity
             android:name=".ui.GeneratorActivity"
@@ -46,7 +45,9 @@
 
         <activity android:name=".ui.GeneratorListActivity" />
 
-        <activity android:name=".ui.AnimationActivity" />
+        <activity android:name=".ui.CollectionsActivity" />
+
+        <activity android:name=".ui.CollectionActivity" />
 
         <activity
             android:name=".ui.MyProfileActivity"
@@ -55,24 +56,24 @@
         <activity android:name=".ui.MyProfileTabActivity" />
 
         <activity
-            android:name=".ui.PatternEntryActivity"
-            android:label="@string/pattern_entry_title" />
-
-        <activity android:name=".ui.PatternInfoActivity" />
-
-        <activity android:name=".ui.SettingsAnimationActivity" />
-
-        <activity android:name=".ui.SettingsActivity" />
-
-        <activity
             android:name=".ui.VideoActivity"
             android:label="@string/video_title" />
 
+        <activity android:name=".ui.AnimationActivity" />
+
+        <activity android:name=".ui.PatternInfoActivity" />
+
+        <activity android:name=".ui.SettingsActivity" />
+
+        <activity android:name=".ui.ColorPreferenceActivity" />
+
+        <!-- Commented because not used yet
         <activity
             android:name="org.superdry.util.colorpicker.lib.SuperdryColorPicker"
             android:theme="@android:style/Theme.Dialog" />
 
         <activity android:name="org.achartengine.GraphicalActivity" />
+        -->
 
     </application>
 </manifest> 
